# VOICE_MESH

./: .gitignore  BUG_REPORT.md  CLAUDE.md  GITHUB_DEPLOYMENT_PLAN.md  QUICKSTART.md  README.md  TEST_SUMMARY.md
BRAIN/: .env.example  VOICE_PIPELINE_SETUP.md  VOICE_QUICKSTART.md  pyproject.toml  test_anthropic_connection.py
BRAIN/src/brain/: app.py  audio_capture.py  llm_parser.py  mesh_server.py  nlu.py  protocol.py  shape_gen.py  state.py  transcription.py  voice_client.py  ws_client.py
BRAIN/tests/: test_nlu.py  test_protocol.py  test_shape_gen.py  test_state.py
ndi-output/: main.js  ndi_sender.py  package-lock.json  package.json  preload.js
protocol/: examples.jsonl  schema.json
renderer/: index.html  package-lock.json  package.json  vitest.config.js
renderer/src/: main.js  meshGenerator.js  postProcessing.js  sceneSpec.js  wsClient.js
renderer/src/__tests__/: meshGenerator.test.js  sceneSpec.test.js
renderer/src/shaders/: meshEnhance.frag.glsl  meshEnhance.vert.glsl  raymarch.frag.glsl
